--- a/styles/color.scss
+++ b/styles/color.scss
@@ -1,25 +1,10 @@
-$primary: #008a37;
+$primary: #032259;
 $secondary: #454743;
-$secondary_bg: #323638;
-$hero_bg: linear-gradient(
-  -180deg,
-  rgba(198, 255, 198, 0.13) 90%,
-  rgba(255, 255, 255, 1) 100%
-);
+$secondary_bg: #f7f9f9;
 $white: #fff;
 $black: #000;
-$light_text: #767873;
-$dark_text: #1f1f1f;
-$btn_bg: #00ca54;
-$flex2_bg: #d0f8ff;
-$flex3_bg: linear-gradient(0deg, rgba(0, 110, 42, 0.05), rgba(0, 110, 42, 0.05)),
-  #fcfdf7;
-$form_bg: #edeff3;
-$placeholder: #abaca6;
-$social_border: #ebffe7;
-$team_greendot: #69ff87;
-$tena_blackdot: #002108;
-$team_role: #525252;
-$team_quote: #3d3d3d;
-$nav_shadow: 0px 2px 6px 2px rgba(0, 202, 84, 0.15);
-$dot_bg: #002108;
+$light_text: #1a3e6f;
+$dark_text: #000;
+$header_text: #fe0002;
+$nav_shadow: 0 2px 6px 2px rgba(33, 73, 135, 0.7);
+/* 214987 */
