--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+/* 214987 */
 *,
 *::after,
 *::before {
@@ -36,28 +37,6 @@ a {
   color: inherit;
 }
 
-input {
-  font-family: "Nunito", sans-serif;
-  font-style: normal;
-  color: #1f1f1f;
-}
-input::-moz-placeholder {
-  font-family: "Nunito", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  color: #abaca6;
-  font-size: 0.8rem;
-  line-height: 1.2rem;
-}
-input::placeholder {
-  font-family: "Nunito", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  color: #abaca6;
-  font-size: 0.8rem;
-  line-height: 1.2rem;
-}
-
 /* --------------------------------------HEADER-------------------------------------- */
 header {
   position: relative;
@@ -68,7 +47,7 @@ header .navbar {
   background: #fff;
   z-index: 200;
   position: fixed;
-  box-shadow: 0px 2px 6px 2px rgba(0, 202, 84, 0.15);
+  box-shadow: 0 2px 6px 2px rgba(33, 73, 135, 0.7);
   padding-right: 1rem;
 }
 @media screen and (min-width: 576px) {
@@ -112,10 +91,10 @@ header .navbar ul li {
   line-height: normal;
   letter-spacing: 0em;
   text-align: left;
-  color: #1f1f1f;
+  color: #000;
 }
 header .navbar ul li:hover {
-  color: #008a37;
+  color: #032259;
   font-weight: 600;
   /* add animation on hover  */
 }
@@ -125,31 +104,17 @@ header .navbar_inner {
   justify-content: space-between;
 }
 header .navbar_inner .nav_logo {
-  width: 3rem;
-  aspect-ratio: 1/1;
+  width: 13rem;
+  height: 4rem;
   position: relative;
 }
 @media screen and (min-width: 992px) {
   header .navbar_inner .nav_logo {
-    width: 4.5rem;
+    width: 16rem;
+    height: 6rem;
   }
 }
-header .navbar_inner .nav_btn {
-  padding: 1rem 2rem;
-  border: 1px solid #00ca54;
-  border-radius: 6rem;
-  background: #fff;
-  font-weight: 700;
-  font-size: 1.1rem;
-  cursor: pointer;
-  color: #00ca54;
-}
-header .navbar_inner .nav_btn:hover {
-  color: #fff;
-  background: #00ca54;
-}
-header .navbar_inner .menu_items,
-header .navbar_inner .nav_btn {
+header .navbar_inner .menu_items {
   display: none;
 }
 header .navbar_inner .toogle_btn {
@@ -207,13 +172,176 @@ header .dropdown_menu ul {
 }
 header .dropdown_menu ul li {
   cursor: pointer;
-  color: #1f1f1f;
+  color: #000;
 }
 header .dropdown_menu ul li:hover {
-  color: #008a37;
+  color: #032259;
 }
 @media screen and (min-width: 992px) {
   header .dropdown_menu {
     display: none;
+  }
+}
+
+/* --------------------------------------HERO SECTION-------------------------------------- */
+.hero_sec {
+  background: #f7f9f9;
+  margin-top: 4.6rem;
+  height: 100%;
+  min-height: 30vh;
+}
+@media screen and (min-width: 992px) {
+  .hero_sec {
+    margin-top: 6.5rem;
+  }
+}
+.hero_sec_inner {
+  display: grid;
+  align-items: center;
+  place-content: center;
+  justify-content: center;
+  padding: 2.5rem 1rem 1rem 1rem;
+}
+@media screen and (min-width: 992px) {
+  .hero_sec_inner {
+    padding: 2.5rem;
+  }
+}
+.hero_header {
+  text-align: center;
+  color: #fe0002;
+  font-size: 1.2rem;
+  font-weight: 900;
+  line-height: normal;
+}
+@media screen and (min-width: 992px) {
+  .hero_header {
+    font-size: 1.8rem;
+    margin-top: 2rem;
+  }
+}
+.hero_bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+.hero_bottom_left {
+  width: 100%;
+  font-weight: 600;
+  font-size: 1rem;
+  text-align: center;
+  line-height: 2rem;
+  max-width: 35rem;
+  color: #1a3e6f;
+}
+@media screen and (min-width: 992px) {
+  .hero_bottom_left {
+    font-size: 2rem;
+    line-height: 3.5rem;
+  }
+}
+.hero_bottom_right {
+  display: none;
+}
+@media screen and (min-width: 992px) {
+  .hero_bottom_right {
+    display: block;
+  }
+}
+.hero_bottom_right img {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+/* --------------------------------------WE OFFER  SECTION-------------------------------------- */
+.we_offer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.we_offer_inner {
+  padding: 3rem 1rem;
+  text-align: center;
+}
+@media screen and (min-width: 992px) {
+  .we_offer_inner {
+    text-align: left;
+    padding: 6rem 1rem;
+  }
+}
+.we_offer_header {
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.4rem;
+  color: #032259;
+  text-transform: capitalize;
+  margin: 1rem 0;
+}
+.we_offer .offer_box {
+  width: 100%;
+  min-width: 20vw;
+  cursor: pointer;
+  background: #fff;
+  color: #1a3e6f;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+}
+.we_offer .offer_box_sec {
+  padding: 2.5rem 0;
+  display: grid;
+  justify-content: space-between;
+  align-items: center;
+  place-items: center;
+  gap: 2.5rem;
+}
+@media screen and (min-width: 992px) {
+  .we_offer .offer_box_sec {
+    display: flex;
+  }
+}
+.we_offer .offer_box:hover {
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
+@media screen and (min-width: 992px) {
+  .we_offer .offer_box {
+    width: 20rem;
+  }
+}
+.we_offer .offer_box_inner {
+  padding: 1rem;
+}
+.we_offer .offer_box_inner img {
+  width: 5rem;
+  aspect-ratio: 1/1;
+}
+.we_offer .offer_box_text {
+  width: 100%;
+  max-width: 13rem;
+  margin-top: 2rem;
+}
+@media screen and (min-width: 992px) {
+  .we_offer .offer_box_text {
+    max-width: 15rem;
+  }
+}
+.we_offer .offer_box_text h3 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #032259;
+  line-height: normal;
+}
+@media screen and (min-width: 992px) {
+  .we_offer .offer_box_text h3 {
+    font-size: 1.4rem;
+  }
+}
+.we_offer .offer_box_text p {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: normal;
+}
+@media screen and (min-width: 992px) {
+  .we_offer .offer_box_text p {
+    letter-spacing: 0.1em;
   }
 }/*# sourceMappingURL=styles.css.map */
