--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,51 @@ a {
   color: inherit;
 }
 
+/* ---------------------------PRE-LOADER--------------------------- */
+.preloader {
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+  background: #fff;
+}
+.preloader_inner {
+  position: absolute;
+  margin: -15em 0 0 -15em;
+  font-size: 2px;
+  top: 50vh;
+  left: 50vw;
+  background: #fff;
+  border-top: 0.8em solid rgba(35, 35, 35, 0.2);
+  border-right: 0.8em solid rgba(35, 35, 35, 0.2);
+  border-bottom: 0.8em solid rgba(35, 35, 35, 0.2);
+  border-left: 0.8em solid #032259;
+  transform: translateZ(0);
+  animation: preloader 0.7s infinite linear;
+}
+.preloader_inner, .preloader_inner:after {
+  border-radius: 50%;
+  width: 30em;
+  height: 30em;
+}
+.preloader.hidden {
+  opacity: 0;
+  z-index: 0;
+}
+
+@keyframes preloader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /* --------------------------------------HEADER-------------------------------------- */
 header {
   position: relative;
@@ -343,5 +388,37 @@ header .dropdown_menu ul li:hover {
 @media screen and (min-width: 992px) {
   .we_offer .offer_box_text p {
     letter-spacing: 0.1em;
+  }
+}
+
+/* --------------------------------------FOOTER  SECTION-------------------------------------- */
+.footer {
+  border-top: 2px solid #f7f9f9;
+  padding-top: 2rem;
+}
+.footer_inner {
+  display: grid;
+  justify-content: space-around;
+  place-items: center;
+  align-items: center;
+  padding: 1.5rem;
+  gap: 1rem;
+  text-transform: capitalize;
+  font-weight: 400;
+  color: #000;
+}
+@media screen and (min-width: 992px) {
+  .footer_inner {
+    display: flex;
+  }
+}
+.footer_inner img {
+  width: 11rem;
+  height: 3rem;
+}
+@media screen and (min-width: 992px) {
+  .footer_inner img {
+    width: 15rem;
+    height: 4rem;
   }
 }/*# sourceMappingURL=styles.css.map */
