--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -47,7 +47,7 @@ a {
   right: 0;
   left: 0;
   bottom: 0;
-  z-index: 100;
+  z-index: 1000;
   background: $white;
 
   &_inner {
@@ -74,7 +74,7 @@ a {
 
   &.hidden {
     opacity: 0;
-    z-index: 0;
+    z-index: -100;
   }
 }
 
@@ -396,6 +396,27 @@ header {
         }
       }
     }
+
+    &_btn {
+      border: none;
+      border-radius: 5px;
+      width: 8rem;
+      height: 2.8rem;
+      margin-top: 1.5rem;
+      border: 1px solid $header_text;
+      background: $white;
+      color: $black;
+      font-size: 1rem;
+      font-weight: 600;
+      text-transform: capitalize;
+      cursor: pointer;
+
+      &:hover {
+        background: $header_text;
+        color: $white;
+        font-weight: 800;
+      }
+    }
   }
 }
 
@@ -423,7 +444,7 @@ header {
       height: 3rem;
 
       @media screen and (min-width: 992px) {
-        width: 15rem;
+        width: 13rem;
         height: 4rem;
       }
     }
