--- a/styles/styles.css
+++ b/styles/styles.css
@@ -118,7 +118,7 @@ header .navbar ul {
 }
 @media screen and (min-width: 992px) {
   header .navbar ul {
-    gap: 1.5rem;
+    gap: 1rem;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -182,10 +182,7 @@ header .dropdown_menu {
   position: absolute;
   top: 4.2rem;
   z-index: 100;
-  border-radius: 1rem;
   padding: 1.54rem 0;
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
   background: #fff;
   width: 100%;
   display: flex;
@@ -196,6 +193,7 @@ header .dropdown_menu {
   overflow: hidden;
   right: -50rem;
   transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  box-shadow: 0 2px 6px 2px rgba(33, 73, 135, 0.7);
 }
 @media screen and (min-width: 576px) {
   header .dropdown_menu {
@@ -213,7 +211,8 @@ header .dropdown_menu.open {
 header .dropdown_menu ul {
   text-align: center;
   display: grid;
-  gap: 1rem;
+  gap: 3rem;
+  padding: 3rem 0;
 }
 header .dropdown_menu ul li {
   cursor: pointer;
@@ -265,11 +264,20 @@ header .dropdown_menu ul li:hover {
     margin-top: 2rem;
   }
 }
+.hero_header img {
+  width: 100%;
+  height: 7rem;
+}
+@media screen and (min-width: 992px) {
+  .hero_header img {
+    width: 80%;
+    height: 8rem;
+  }
+}
 .hero_bottom {
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin-top: 2rem;
+  align-items: flex-start;
 }
 .hero_bottom_left {
   width: 100%;
@@ -277,11 +285,13 @@ header .dropdown_menu ul li:hover {
   font-size: 1rem;
   text-align: center;
   line-height: 2rem;
+  padding-top: 1rem;
   max-width: 35rem;
   color: #1a3e6f;
 }
 @media screen and (min-width: 992px) {
   .hero_bottom_left {
+    padding-top: 2rem;
     font-size: 2rem;
     line-height: 3.5rem;
   }
