--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -116,7 +116,7 @@ header {
       gap: 2rem;
 
       @media screen and (min-width: 992px) {
-        gap: 1.5rem;
+        gap: 1rem;
       }
 
       @media screen and (min-width: 1200px) {
@@ -191,10 +191,7 @@ header {
     position: absolute;
     top: 4.2rem;
     z-index: 100;
-    border-radius: 1rem;
     padding: 1.54rem 0;
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
     background: $white;
     width: 100%;
     display: flex;
@@ -205,6 +202,7 @@ header {
     overflow: hidden;
     right: -50rem;
     transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    box-shadow: $nav_shadow;
 
     @media screen and (min-width: 576px) {
       width: 300px;
@@ -220,7 +218,8 @@ header {
     ul {
       text-align: center;
       display: grid;
-      gap: 1rem;
+      gap: 3rem;
+      padding: 3rem 0;
 
       li {
         cursor: pointer;
@@ -271,13 +270,22 @@ header {
       font-size: 1.8rem;
       margin-top: 2rem;
     }
+
+    img {
+      width: 100%;
+      height: 7rem;
+
+      @media screen and (min-width: 992px) {
+        width: 80%;
+        height: 8rem;
+      }
+    }
   }
 
   &_bottom {
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
+    align-items: flex-start;
 
     &_left {
       width: 100%;
@@ -285,9 +293,11 @@ header {
       font-size: 1rem;
       text-align: center;
       line-height: 2rem;
+      padding-top: 1rem;
       max-width: 35rem;
       color: $light_text;
       @media screen and (min-width: 992px) {
+        padding-top: 2rem;
         font-size: 2rem;
         line-height: 3.5rem;
       }
