--- a/styles/styles.css
+++ b/styles/styles.css
@@ -450,4 +450,52 @@ header .dropdown_menu ul li:hover {
     width: 13rem;
     height: 4rem;
   }
+}
+
+/* ANIMATIONS */
+/* ADDING SCROLL ANIMATIONS */
+.animations_up {
+  opacity: 0;
+  transform: translateY(100px);
+  transition: all 0.7s ease-out;
+  transition-delay: 0.5s;
+}
+
+/*  */
+.animations_down {
+  opacity: 0;
+  transform: translateY(-100px);
+  transition: all 0.7s ease-out;
+  transition-delay: 0.5s;
+}
+
+/*  */
+.animations_left {
+  opacity: 0;
+  transform: translateX(-110px);
+  transition: all 0.6s ease-out;
+  transition-delay: 0.4s;
+  overflow: hidden;
+}
+@media screen and (min-width: 1400px) {
+  .animations_left_special {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: all 0.6s ease-out;
+    transition-delay: 0.4s;
+  }
+}
+
+/*  */
+.animations_right {
+  opacity: 0;
+  transform: translateX(100px);
+  transition: all 0.6s ease-out;
+  transition-delay: 0.4s;
+}
+
+/*  */
+.scroll-animation {
+  opacity: 1;
+  transform: translate(0);
 }/*# sourceMappingURL=styles.css.map */
