--- a/styles/color.scss
+++ b/styles/color.scss
@@ -7,4 +7,7 @@ $light_text: #1a3e6f;
 $dark_text: #000;
 $header_text: #fe0002;
 $nav_shadow: 0 2px 6px 2px rgba(33, 73, 135, 0.7);
+$light_main_bg: #f6f6f6;
+$link_hover: blue;
+
 /* 214987 */
