--- a/styles/styles.css
+++ b/styles/styles.css
@@ -539,6 +539,8 @@ footer .footer_bottom {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 0.5rem;
   text-transform: capitalize;
   text-align: center;
   font-weight: 600;
