--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -550,6 +550,8 @@ footer {
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
+      gap: 0.5rem;
       text-transform: capitalize;
       text-align: center;
       font-weight: 600;
